--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,14 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+theme: minima
+title: Today I Learned: "A Potpourri of Posts"
+author: Adam Taitano
+email: adam.taitano@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A Personal Blog for Adam Taitano. Contains "About" and "Posts" Sections.
+  Each post may mention topics about learning software development, security,
+  artificial intelligence, or even music and writing.
 
 # social links
-twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
+twitter_username: AdamTaitano # DO NOT include the @ character, or else the build will fail!
+github_username:  adamtaitano # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
