--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: minima
-title: Today I Learned: "A Potpourri of Posts"
+title: "Today I Learned: 'A Potpourri of Posts'"
 author: Adam Taitano
 email: adam.taitano@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
